biosc1 fix - change .fruit-box to column for alignment

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -50,7 +50,8 @@ img {
 
 .fruit-box {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   max-width: 225px;
+  align-items: center;
 }
 
